# polars-benchmark

./: .gitignore  LICENSE  Makefile  README.md  common_utils.py  convert.py  plot_results.py  prepare_files.py  prepare_large_files.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-polars-gpu.txt  requirements-polars-only.txt  requirements.in  requirements.txt  run.sh  settings.py  timings.csv  utils.py
dask_queries/: executor.py  q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  utils.py
duckdb_queries/: executor.py  q1.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q2.py  q20.py  q21.py  q22.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  utils.py
m5-forecasting-feature-engineering/: README.md  duckdb_queries.py  pandas_queries.py  polars_queries.py
modin_queries/: executor.py  q1.py  q2.py  q3.py  q5.py  q6.py  q7.py  utils.py
pandas_queries/: __init__.py  executor.py  pandas_tpch_utils.py  q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  utils.py
polars_queries/: datasets.py  executor.py  polars_tpch_utils.py  q03.py  q1.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q2.py  q20.py  q21.py  q22.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py  utils.py
polars_queries_rust/: Cargo.toml
polars_queries_rust/src/: main.rs  q1.rs  q21.rs  utils.rs
polars_tpch_benchmarks/: __init__.py  datasets.py
pyspark_queries/: executor.py  q11.py  q13.py  q15.py  q16.py  q18.py  q19.py  q22.py  q4.py  q7.py  q8.py  q9.py  utils.py
queries/: common_utils.py  (+1 more)
(+242 files in other folders)
